--- a/gp.css
+++ b/gp.css
@@ -1,8 +1,14 @@
 
-button {
+.ui-btn {
     position: fixed;
-    top: 10;
-    right: 10;
     z-index: 10;
+}
+
+.ui-btn-clear {
+    top: 10px;
+}
+
+.ui-btn-home {
+    top: 40px;
 }
 
